First refactor code