@@ -8,7 +8,6 @@ import org.mapstruct.Mapping;
 import org.mapstruct.ReportingPolicy;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring", unmappedTargetPolicy = ReportingPolicy.IGNORE)
 public abstract class IArticleRequestMapper {
@@ -16,12 +15,10 @@ public abstract class IArticleRequestMapper {
     @Mapping(target = "createdAt", ignore = true)
     @Mapping(target = "updatedAt", ignore = true)
     public Article toArticle(ArticleRequest articleRequest) {
-        // Convierte los IDs de categorías a objetos Category
         List<Category> categories = articleRequest.getCategories().stream()
-                .map(Category::new) // Constructor de solo ID
-                .collect(Collectors.toList());
+                .map(Category::new)
+                .toList();
 
-        // Usa el método de fábrica para crear el Article
         return Article.createWithoutId(
                 articleRequest.getName(),
                 articleRequest.getDescription(),
